# ecsms

./: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  vcpkg.json
applications/ecsms/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
applications/ecsms/controlls/: activenodeslock.cpp  activenodeslock.h  controllerprocedure.h  defaultcontroller.cpp  defaultcontroller.h  drawlinecontroller.cpp  drawlinecontroller.h  drawrectanglecontroller.cpp  drawrectanglecontroller.h  emptycontroller.cpp  emptycontroller.h
applications/ecsms/delegate/: qlineeditdelegate.cpp
applications/ecsms/events/: addblockevent.h  changecontrollerevent.cpp  changecontrollerevent.h  event.h  removeblockevent.cpp  repaintevent.cpp  repaintevent.h  updateblockevent.cpp  visualmodelupdateevent.cpp  visualmodelupdateevent.h
applications/ecsms/models/: fieldmodel.cpp  fieldmodel.h  imodel.h  phantomlinemodel.cpp  phantomlinemodel.h  phantomrectanglemodel.cpp  phantomrectanglemodel.h  selectionmodel.cpp  selectionmodel.h  visualizationmodel.cpp  visualizationmodel.h
applications/ecsms/namemaker/: id.cpp  id.h  namemaker.cpp  namemaker.h
applications/ecsms/utility/: mainwindowutility.h  selectionutility.h
applications/ecsms/widgets/: blockfieldwidget.cpp  blockfieldwidget.h  blockwidget.cpp  blockwidget.h  connectnodewidget.cpp  connectnodewidget.h  parameterizeddlg.cpp  parameterizeddlg.h
applications/hedgehog/: CMakeLists.txt  blockfield.cpp  blockfield.h  blockwidget.cpp  blockwidget.h  connectnodewidget.cpp  connectnodewidget.h  drawlinecontroller.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qlineeditdelegate.cpp  qlineeditdelegate.h  resource.qrc
applications/hedgehog/controlls/: activenodeslock.cpp  activenodeslock.h  controllerprocedure.h  defaultcontroller.cpp  defaultcontroller.h  drawlinecontroller.cpp  drawlinecontroller.h  icontroller.h
applications/hedgehog/delegate/: qlineeditdelegate.cpp  qlineeditdelegate.h
applications/hedgehog/events/: addblockevent.cpp  addblockevent.h  changeactivenodeevent.cpp  changeactivenodeevent.h  drawevent.cpp  drawevent.h  drawlineevent.cpp  drawlineevent.h  event.h  mypaintevent.cpp  mypaintevent.h  removeblockevent.h  updateblockevent.h
applications/hedgehog/models/: activeblockmodel.cpp  activeblockmodel.h  activenodesmodel.cpp  activenodesmodel.h  fieldmodel.cpp  fieldmodel.h  imodel.h  linemodel.cpp  linemodel.h  nodetype.h  selectionmodel.cpp  selectionmodel.h  visualizationmodel.cpp  visualizationmodel.h
applications/hedgehog/namemaker/: blockid.cpp  blockid.h  blocknamemaker.cpp  blocknamemaker.h  id.cpp  id.h  namemaker.cpp  nodeid.cpp  nodeid.h
applications/hedgehog/observer/: iobserver.h
applications/hedgehog/utility/: containerutility.h  mainwindowutility.h  tagutility.h
applications/hedgehog/widgets/: blockfieldwidget.cpp  blockfieldwidget.h  blockwidget.cpp  blockwidget.h  connectnodewidget.cpp
libraries/: CMakeLists.txt
libraries/analytics/: CMakeLists.txt
libraries/analytics/inc/: analytics.h
libraries/analytics/src/: analytics.cpp
libraries/common/: CMakeLists.txt
libraries/common/inc/: SteadyClock.h
libraries/common/src/: SteadyClock.cpp
libraries/database_library/: CMakeLists.txt
libraries/database_library/inc/: IConnection.h  IDatabaseManager.h  IExecuteResult.h  IExecuteResultStatus.h  IExecutorEAV.h  IExecutorEAVNamingRules.h  IFile.h
libraries/database_library/public_inc/: IConnection.h  IDatabaseManager.h  IExecuteResult.h  IExecutorEAV.h  foo.h
libraries/database_library/src/: ExecutorEAVNamingRules.cpp  InternalExecuteResultStatus.cpp  InternalExecuteResultStatus.h  PGConnection.cpp  PGConnection.h  PGDatabaseManager.cpp  PGDatabaseManager.h  PGExecuteResult.cpp  PGExecuteResult.h  PGExecuteResultStatus.cpp  PGExecuteResultStatus.h  PGExecutorEAV.cpp  PGExecutorEAV.h  PGExecutorEAVNamingRules.cpp  PGExecutorEAVNamingRules.h  PGRemoteFile.cpp  PGRemoteFile.h  PGSQLDataTypeUtility.cpp  PGSQLDataTypeUtility.h  PGSQLTypeByteArray.cpp  PGSQLTypeByteArray.h  PGSQLTypeConverter.cpp  PGSQLTypeConverter.h  PGSQLTypeInteger.cpp  PGSQLTypeInteger.h  PGSQLTypeRemoteFileId.cpp  PGSQLTypeRemoteFileId.h  PGSQLTypeText.cpp  PGSQLTypeText.h  SQLUtility.cpp  SQLUtility.h  foo.cpp
libraries/pipeline/: CMakeLists.txt
libraries/pipeline/inc/: ConnectablePipelineStage.h  ConsumerStage.h  ConsumerTaskRetrieveStrategy.h  ConsumptionStrategy.h  GenericPipelineStage.h  IPipelineStage.h  InOutStageConnection.h  InStageConnection.h  OutStageConnection.h  Pipeline.h  PipelineException.h  PipelineHelpers.h  PipelineRegistry.h  PipelineStage.h  PipelineStageNameConverter.h  PipelineStageType.h  ProducerAndConsumerStage.h  ProducerStage.h  SPMCStageConnection.h  StageConnection.h  (+12 more)
libraries/pipeline_presentation/: CMakeLists.txt
libraries/pipeline_registry/: CMakeLists.txt
libraries/pipeline_sample/: CMakeLists.txt
libraries/pipeline_stage_observer/: CMakeLists.txt
libraries/pipeline_stages/: CMakeLists.txt
libraries/registry/: CMakeLists.txt
libraries/test_library/: CMakeLists.txt
tests/: CMakeLists.txt
tests/analytics_tests/: CMakeLists.txt
tests/common_tests/: CMakeLists.txt  SteadyClock_tests.cpp
tests/database_library_tests/: CMakeLists.txt  ConnectionTests.cpp  DatabaseManagerTests.cpp  ExecutorEAVNamingRulesTests.cpp  ExecutorEAVTests.cpp  RemoteFileTests.cpp  SQLTypeByteArrayTests.cpp  SQLTypeConverterTests.cpp  SQLTypeIntegerTests.cpp  SQLTypeRemoteFileIdTests.cpp  SQLTypeTextTests.cpp  TestSettings.h  database_library_tests.cpp
tests/pipeline_presentation_tests/: CMakeLists.txt  PipelineRegistry_tests.cpp  PipelineToYaml_tests.cpp  YamlToPipeline_tests.cpp
tests/pipeline_registry_tests/: CMakeLists.txt  PipelineRegistry_tests.cpp
tests/pipeline_stage_observer_tests/: CMakeLists.txt  pipeline_stage_observer_tests.cpp
tests/pipeline_tests/: CMakeLists.txt  PipelineRegistry_tests.cpp  Pipeline_tests.cpp  TestConsumerStage.h
tests/registry_tests/: CMakeLists.txt  registry_tests.cpp
tests/test_library_tests/: CMakeLists.txt  test_library_tests.cpp
(+126 files in other folders)
